[tool.poetry]
name = "dagster_utils"
version = "0.0.0"
description = "Dagster utilities shared across DAGs"
authors = ["Jasper Ginn"]
#readme = "README.md"
packages = [{include = "dagster_utils", from="src"}]

[tool.poetry.dependencies]
python = "^3.9,<3.12"
dagster = "^1.5.8"
duckdb = "^0.9.2"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.26.0"
pandas = "^2.1.3"
pytest = "^8.0.1"

[tool.poetry-git-version-plugin]
alpha_version_format = '{version}a{distance}+{commit_hash}'
version_format = '{version}'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
